--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,3 +5,7 @@
       showPreview="true" formControlName="FileUp"></ng-bootstrap-fileupload-angular>
   </div>
 </form>
+<button class="btn btn-radius btn-primary" (click)="guardar()" >
+  <i class="fa fa-floppy-o"></i>
+  Guardar
+</button>
